fix: issue with footer overlapping over the content

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,6 +16,7 @@ body {
   background: url("/images/pattern-curve.svg") bottom left/80% no-repeat;
   height: 100%;
   min-height: 100vh;
+  position: relative;
 
   @include breakpoint-up(medium) {
     background-size: 42.36%;
